--- a/index.html
+++ b/index.html
@@ -14,25 +14,24 @@
 <body>
     <header>
         <div id="logo">
-            <a href="#"><img src="img/로고.png" alt=""></a>
+            <a href="index.html"><img src="img/로고.png" alt="logo"></a>
         </div>
-        
+
         <nav id="menu">
             <ul>
-                <li><a
-                        href="sub.html">게임용
-                        PC</a></li>
-                <li><a
-                        href="sub.html">사무용
-                        PC</a></li>
-                <li><a
-                        href="sub.html">PC부품</a>
+                <li><a href="sub.html">게임용
+                        PC</a>
                 </li>
-                <li><a
-                        href="sub.html">노트북</a>
+
+                <li><a href="sub.html">사무용
+                        PC</a>
                 </li>
-                <li><a
-                        href="sub.html">중고PC</a>
+                <li>
+                    <a href="sub.html">PC부품</a>
+                </li>
+                <li><a href="sub.html">노트북</a>
+                </li>
+                <li><a href="sub.html">중고PC</a>
                 </li>
             </ul>
         </nav>
