--- a/sub.html
+++ b/sub.html
@@ -13,9 +13,9 @@
 <body onload="init();">
     <header>
         <div id="logo">
-            <a href=
-            "file:///C:/Users/LINE/Documents/%EC%96%91%EC%84%B1%EC%88%98/%ED%8F%AC%ED%86%A0%EC%83%B5/%EC%87%BC%ED%95%91%EB%AA%B0/index.html"><img src="img/로고.png" alt=""></a>
+            <a href="index.html"><img src="img/로고.png" alt="logo"></a>
         </div>
+        
         <nav id="menu">
             <ul>
                 <li><a href="#">게임용 PC</a></li>
