--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Speed PC</title>
 
+    <link rel="icon" href="img/로고.png" type="image/x-icon">
+    <link rel="shortcut icon" href="img/로고.png" type="image/x-icon">
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
