--- a/sub.html
+++ b/sub.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Speed PC</title>
-
+    
+    <link rel="icon" href="img/로고.png" type="image/x-icon">
+    <link rel="shortcut icon" href="img/로고.png" type="image/x-icon">
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/sub.css">
 </head>
